--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ R2_SECRET_KEY=your_r2_secret_key
 STRIPE_SECRET_KEY=your_stripe_secret
 YOOKASSA_SECRET_KEY=your_yookassa_secret
 WEBHOOK_SECRET=your_webhook_secret_if_needed
-PRODUCTION_DOMAIN=c0r.ai
+BASE_URL=c0r.ai
