--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
-# --- NeuCor.AI SECRETS ---
+# API сервис
+TELEGRAM_BOT_TOKEN=your_telegram_token
+SUPABASE_URL=your_supabase_url
+SUPABASE_SERVICE_KEY=your_supabase_service_key
+PRODUCTION_DOMAIN=c0r.ai
 
-SUPABASE_URL=https://xxx.supabase.co
-SUPABASE_SERVICE_KEY=your_supabase_service_role_key
-OPENAI_API_KEY=your_openai_api_key
-TELEGRAM_BOT_TOKEN=your_user_bot_token
-TELEGRAM_ADMIN_BOT_TOKEN=your_service_bot_token
-TELEGRAM_ADMIN_ID=123456789
-R2_BUCKET_NAME=your_r2_bucket
-R2_ACCESS_KEY=your_r2_access_key
-R2_SECRET_KEY=your_r2_secret_key
-STRIPE_SECRET_KEY=your_stripe_secret
-YOOKASSA_SECRET_KEY=your_yookassa_secret
-WEBHOOK_SECRET=your_webhook_secret_if_needed
-BASE_URL=c0r.ai
+# ML сервис
+OPENAI_API_KEY=your_openai_key
+GEMINI_API_KEY=your_gemini_key
+
+# Платёжный сервис
+YOOKASSA_PROVIDER_TOKEN=your_yookassa_provider_token
+SERVICE_BOT_URL=https://api.c0r.ai/notify
+
+# Общие
+LOG_LEVEL=INFO
+INTERNAL_API_TOKEN=your_strong_random_token
