--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,28 @@
-# API сервис
+# API Service
 TELEGRAM_BOT_TOKEN=your_telegram_token
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_KEY=your_supabase_service_key
 PRODUCTION_DOMAIN=c0r.ai
 
-# ML сервис
+# ML Service
 OPENAI_API_KEY=your_openai_key
 GEMINI_API_KEY=your_gemini_key
 
-# Платёжный сервис
+# Payment Service
+YOOKASSA_SHOP_ID=your_yookassa_shop_id
+YOOKASSA_SECRET_KEY=your_yookassa_secret_key
 YOOKASSA_PROVIDER_TOKEN=your_yookassa_provider_token
 SERVICE_BOT_URL=https://api.c0r.ai/notify
 
-# Общие
+# Service URLs (change for production)
+# For local development (Docker):
+ML_SERVICE_URL=http://ml:8001
+PAY_SERVICE_URL=http://pay:8002
+
+# For production (AWS with subdomains):
+# ML_SERVICE_URL=https://ml.c0r.ai
+# PAY_SERVICE_URL=https://pay.c0r.ai
+
+# General
 LOG_LEVEL=INFO
 INTERNAL_API_TOKEN=your_strong_random_token
