--- a/.env.production.example
+++ b/.env.production.example
@@ -1,43 +1,30 @@
-# Production Environment Configuration for AWS EC2
+# Production Environment Configuration for AWS
+# Copy this file to .env on your production server
 
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=your_production_bot_token
+# API Service
+TELEGRAM_BOT_TOKEN=your_production_telegram_token
+SUPABASE_URL=your_supabase_url
+SUPABASE_SERVICE_KEY=your_supabase_service_key
+PRODUCTION_DOMAIN=c0r.ai
 
-# Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your_supabase_anon_key
+# ML Service
+OPENAI_API_KEY=your_openai_key
+GEMINI_API_KEY=your_gemini_key
 
-# OpenAI
-OPENAI_API_KEY=sk-your-openai-key
-
-# Base URL for production
-BASE_URL=c0r.ai
-
-# Service URLs (internal Docker network)
-ML_SERVICE_URL=http://ml:8001
-PAY_SERVICE_URL=http://pay:8002
-
-# Internal API security
-INTERNAL_API_TOKEN=your-secure-internal-token
-
-# YooKassa Payment Configuration
+# Payment Service
 YOOKASSA_SHOP_ID=your_yookassa_shop_id
 YOOKASSA_SECRET_KEY=your_yookassa_secret_key
-YOOKASSA_PRICE_RUB=50000
-YOOKASSA_CREDITS=50
-YOOKASSA_DESCRIPTION="50 credits for c0r.ai food analysis"
+YOOKASSA_PROVIDER_TOKEN=your_yookassa_provider_token
+SERVICE_BOT_URL=https://api.c0r.ai/notify
 
-# Cloudflare (if using)
-CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
-CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
-R2_BUCKET_NAME=c0r-ai-images
-R2_ACCESS_KEY_ID=your_r2_access_key
-R2_SECRET_ACCESS_KEY=your_r2_secret_key
+# Production Service URLs (AWS subdomains)
+ML_SERVICE_URL=https://ml.c0r.ai
+PAY_SERVICE_URL=https://pay.c0r.ai
 
-# Production URLs for external access
-API_URL=https://api.c0r.ai
-ML_URL=https://ml.c0r.ai
-PAY_URL=https://pay.c0r.ai
+# General
+LOG_LEVEL=INFO
+INTERNAL_API_TOKEN=your_strong_random_token
 
-# Logging level
-LOG_LEVEL=INFO 
+# Production-specific settings
+ENVIRONMENT=production
+DEBUG=false 
