--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,12 @@ SERVICE_BOT_URL=https://api.c0r.ai/notify
 # For local development (Docker):
 ML_SERVICE_URL=http://ml:8001
 PAY_SERVICE_URL=http://pay:8002
+API_SERVICE_URL=http://api:8000
 
 # For production (AWS with subdomains):
 # ML_SERVICE_URL=https://ml.c0r.ai
 # PAY_SERVICE_URL=https://pay.c0r.ai
+# API_SERVICE_URL=https://api.c0r.ai
 
 # General
 LOG_LEVEL=INFO
