--- a/.env.production.example
+++ b/.env.production.example
@@ -20,6 +20,7 @@ SERVICE_BOT_URL=https://api.c0r.ai/notify
 # Production Service URLs (AWS subdomains)
 ML_SERVICE_URL=https://ml.c0r.ai
 PAY_SERVICE_URL=https://pay.c0r.ai
+API_SERVICE_URL=https://api.c0r.ai
 
 # General
 LOG_LEVEL=INFO
