Updated v3.7 Contacts; Daily plan, 50+ Recommendations after Photo processed, Invoice logo, assets

--- a/api.c0r.ai/Dockerfile
+++ b/api.c0r.ai/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY api.c0r.ai/app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY api.c0r.ai/app/ .
-# COPY api.c0r.ai/assets ./assets  # TODO: Enable when assets folder exists
+COPY assets ./assets
 COPY common /common
 RUN ln -s /common /app/common
 CMD ["env", "PYTHONPATH=/common", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
