--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -5,4 +5,9 @@ pytest-mock>=3.10.0
 coverage>=7.0.0
 mock>=4.0.0
 aioresponses>=0.7.0
-httpx>=0.24.0 
+httpx>=0.24.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+yookassa>=2.3.0
+aiogram>=3.0.0
+supabase>=2.0.0 
