--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,39 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r api.c0r.ai/app/requirements.txt
+        pip install -r tests/requirements.txt
+        
+    - name: Run deployment tests
+      run: |
+        chmod +x tests/deploy_test.sh
+        ./tests/deploy_test.sh
+        
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: tests/coverage/
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: success()
     
     steps:
     - name: Checkout code
