--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -10,6 +10,7 @@ markers =
     unit: marks tests as unit tests
     critical: marks tests as critical for deployment
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning 
