--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,34 @@ services:
   api:
     build:
       context: .
-      dockerfile: api.c0r.ai/Dockerfile
+      dockerfile: services/api/bot/Dockerfile
     env_file: .env
     ports:
       - "8000:8000"
     depends_on:
       - ml
       - pay
+    networks:
+      - c0r-network
   ml:
     build:
       context: .
-      dockerfile: ml.c0r.ai/Dockerfile
+      dockerfile: services/ml/Dockerfile
     env_file: .env
     ports:
       - "8001:8001"
+    networks:
+      - c0r-network
   pay:
     build:
       context: .
-      dockerfile: pay.c0r.ai/Dockerfile
+      dockerfile: services/pay/Dockerfile
     env_file: .env
     ports:
-      - "8002:8002" 
+      - "8002:8002"
+    networks:
+      - c0r-network
+
+networks:
+  c0r-network:
+    driver: bridge
