--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ python-telegram-bot==20.7
 python-dotenv==1.0.1
 httpx==0.25.2
 supabase==2.3.5
+gotrue==1.3.1
 loguru==0.7.2
 pytest==8.2.0
 black==24.4.2
