--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     depends_on:
       - ml
       - pay
+      - redis
     networks:
       - c0r-network
     mem_limit: 512m
@@ -33,6 +34,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+
   ml:
     build:
       context: .
@@ -61,6 +63,7 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+
   pay:
     build:
       context: .
@@ -68,6 +71,10 @@ services:
     env_file: .env
     ports:
       - "8002:8002"
+    networks:
+      - c0r-network
+    restart: unless-stopped
+
   api_public:
     build:
       context: .
@@ -100,6 +107,19 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - c0r-network
+    restart: unless-stopped
+    logging:
+      driver: json-file
+      options:
+        max-size: "5m"
+        max-file: "3"
 
 networks:
   c0r-network:
